- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P1: Critical
 - 
    6.2.0 FF
 - 
    None
 
~/qt6/qtwebengine/examples/webenginewidgets/printme/build$ ./printme
qt.webenginecontext:GLImplementation: desktop
Surface Type: OpenGL
Surface Profile: CompatibilityProfile
Surface Version: 4.1
Using Default SG Backend: yes
Using Software Dynamic GL: no
Using Angle: noInit Parameters:
- application-name printme
 - browser-subprocess-path /home/u/INSTALL/qt/dev/libexec/QtWebEngineProcess
 - create-default-gl-context
 - disable-features MojoVideoCapture,FontSrcLocalMatching,DnsOverHttpsUpgrade,ConsolidatedMovementXY,InstalledApp,BackgroundFetch,WebOTP,WebPayments,WebUSB,PictureInPicture
 - disable-setuid-sandbox
 - disable-speech-api
 - enable-features AllowContentInitiatedDataUrlNavigations,TracingServiceInProcess
 - enable-threaded-compositing
 - gpu-preferences QAAAAAAAAAAoAAAQAAAAAAAAAAAAAAAAAABgAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAA
 - in-process-gpu
 - use-gl desktop
 Received signal 11 <unknown> 000000000000
#0 0x7f2e92caa889 base::debug::CollectStackTrace()
#1 0x7f2e92bd72c6 base::debug::StackTrace::StackTrace()
#2 0x7f2e92caa271 base::debug::(anonymous namespace)::StackDumpSignalHandler()
#3 0x7f2e8cc893c0 (/usr/lib/x86_64-linux-gnu/libpthread-2.31.so+0x153bf)
#4 0x7f2e8d15c604 QEventLoop::exit()
#5 0x00000040456a _ZZN12PrintHandler13printDocumentEP8QPrinterENKUlbE_clEb
#6 0x000000404bf3 _ZN9QtPrivate11FunctorCallINS_11IndexesListIJLi0EEEENS_4ListIJbEEEvZN12PrintHandler13printDocumentEP8QPrinterEUlbE_E4callERS8_PPv
#7 0x000000404bc1 ZN9QtPrivate7FunctorIZN12PrintHandler13printDocumentEP8QPrinterEUlbE_Li1EE4callINS_4ListIJbEEEvEEvRS4_PvPSA
#8 0x000000404b90 _ZN9QtPrivate18QFunctorSlotObjectIZN12PrintHandler13printDocumentEP8QPrinterEUlbE_Li1ENS_4ListIJbEEEvE4implEiPNS_15QSlotObjectBaseEP7QObjectPPvPb
#9 0x7f2e8d1ac108 doActivate<>()
#10 0x7f2e9b0a30f2 QWebEngineView::printFinished()
#11 0x7f2e8d19d27e QObject::event()
#12 0x7f2e9aa75a12 QApplicationPrivate::notify_helper()
#13 0x7f2e8d14fe9a QCoreApplication::notifyInternal2()
#14 0x7f2e8d153265 QCoreApplicationPrivate::sendPostedEvents()
#15 0x7f2e8d3c7ab3 postEventSourceDispatch()
#16 0x7f2e8bef517d g_main_context_dispatch
#17 0x7f2e8bef5400 (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.6400.6+0x523ff)
#18 0x7f2e8bef54a3 g_main_context_iteration
#19 0x7f2e8d3c741a QEventDispatcherGlib::processEvents()
#20 0x7f2e8d15c9cb QEventLoop::exec()
#21 0x000000404645 PrintHandler::printDocument()
#22 0x000000404fbf QtPrivate::FunctorCall<>::call()
#23 0x000000404f40 QtPrivate::FunctionPointer<>::call<>()
#24 0x000000404eab QtPrivate::QSlotObject<>::impl()
#25 0x7f2e8d1ac108 doActivate<>()
#26 0x7f2e9b06bcaf QPrintPreviewDialog::paintRequested()
#27 0x7f2e8d1ac47c doActivate<>()
#28 0x7f2e9b04f67f QPrintPreviewWidget::paintRequested()
#29 0x7f2e9b06e6dc QPrintPreviewDialogPrivate::_q_print()
#30 0x7f2e8d1ac47c doActivate<>()
#31 0x7f2e8e381a32 QAction::triggered()
#32 0x7f2e8e3846c9 QAction::activate()
#33 0x7f2e9ab95ff2 QAbstractButtonPrivate::click()
#34 0x7f2e9ab9613f QAbstractButton::mouseReleaseEvent()
#35 0x7f2e9ac9356a QToolButton::mouseReleaseEvent()
#36 0x7f2e9aac8bf8 QWidget::event()
#37 0x7f2e9aa75a12 QApplicationPrivate::notify_helper()
#38 0x7f2e9aa7e3b7 QApplication::notify()
#39 0x7f2e8d14fe9a QCoreApplication::notifyInternal2()
#40 0x7f2e9aa7ceab QApplicationPrivate::sendMouseEvent()
#41 0x7f2e9aadb411 QWidgetWindow::handleMouseEvent()
#42 0x7f2e9aaddf45 QWidgetWindow::event()
#43 0x7f2e9aa75a12 QApplicationPrivate::notify_helper()
#44 0x7f2e8d14fe9a QCoreApplication::notifyInternal2()
#45 0x7f2e8dfddf7b _ZN22QGuiApplicationPrivate17processMouseEventEPN29QWindowSystemInterfacePrivate10MouseEventE.localalias
#46 0x7f2e8e024f3c QWindowSystemInterface::sendWindowSystemEvents()
#47 0x7f2e88355dfa xcbSourceDispatch()
#48 0x7f2e8bef517d g_main_context_dispatch
#49 0x7f2e8bef5400 (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.6400.6+0x523ff)
#50 0x7f2e8bef54a3 g_main_context_iteration
#51 0x7f2e8d3c741a QEventDispatcherGlib::processEvents()
#52 0x7f2e8d15c9cb QEventLoop::exec()
#53 0x7f2e9acb0292 QDialog::exec()
#54 0x000000404915 PrintHandler::printPreview()
#55 0x00000040437c QtPrivate::FunctorCall<>::call()
#56 0x00000040430e QtPrivate::FunctionPointer<>::call<>()
#57 0x000000404279 QtPrivate::QSlotObject<>::impl()
#58 0x7f2e8d1ac108 doActivate<>()
#59 0x7f2e8d19d27e QObject::event()
#60 0x7f2e9aa75a12 QApplicationPrivate::notify_helper()
#61 0x7f2e8d14fe9a QCoreApplication::notifyInternal2()
#62 0x7f2e8d153265 QCoreApplicationPrivate::sendPostedEvents()
#63 0x7f2e8d3c7ab3 postEventSourceDispatch()
#64 0x7f2e8bef517d g_main_context_dispatch
#65 0x7f2e8bef5400 (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0.6400.6+0x523ff)
#66 0x7f2e8bef54a3 g_main_context_iteration
#67 0x7f2e8d3c741a QEventDispatcherGlib::processEvents()
#68 0x7f2e8d15c9cb QEventLoop::exec()
#69 0x7f2e8d1578fb QCoreApplication::exec()
#70 0x000000403ae3 main
#71 0x7f2e8caa90b3 __libc_start_main
#72 0x00000040339e _start
r8: 0000000000000000 r9: 00007f2e8d40d560 r10: 0000000002a8f950 r11: 0000000000000000
r12: 00007ffd5dcc3b30 r13: 0000000002b0cf60 r14: 0000000001b461b0 r15: 0000000001592801
di: 00007ffd5dcc4b20 si: 0000000000000000 bp: 00007ffd5dcc39a0 bx: 0000000002b0cf90
dx: 0000000000000001 ax: 403e000000000000 cx: 0000000002b0cf70 sp: 00007ffd5dcc3988
ip: 00007f2e8d15c604 efl: 0000000000010246 cgf: 002b000000000033 erf: 0000000000000000
trp: 000000000000000d msk: 0000000000000000 cr2: 0000000000000000
[end of stack trace]
Calling _exit(1). Core file will not be generated.
platform :
No LSB modules are available.
Distributor ID: Ubuntu
Description: Ubuntu 20.04.2 LTS
Release: 20.04
Codename: focal
Source code that can reproduce this crash
https://github.com/qt/qtwebengine/tree/dev/examples/webenginewidgets/printme
steps:
1. after click 'print now' button we enter into 'QPrintPreviewDialog'
2. in QPrintPreviewDialog screen when we click the right-up print button, it pops out QPrintDialog
3. in QprintDialog we choose from name list (Print to File (PDF)) and click print , program crash as above
| For Gerrit Dashboard: QTBUG-95339 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 367330,3 | Fix crash in PrintMe example | dev | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 367586,2 | Fix crash in PrintMe example | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |