Fix crash in PrintMe example

Connecting the same lambda slot multiple times to QWebEngineView::printFinished
causes crash. Fix this by a minor refactoration and adjust documentation.

Pick-to: 6.2
Task-number: QTBUG-95339
Change-Id: I03b6a1ff6244c80073248182a905d8d664fdd326
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>